Changes to the start/stop/status scripts. - The status scripts now return 0 when the service is running. This makes using this scipt's output in other scripts easier. - The searcher's stop script now waits 10 seconds to see if the searcher died nicely, and if this fails, it signals sigkill. - The searcher's start script now:     * Checks the java version before starting.     * Waits for a few seconds after starting the searcher, and then checks it's status. Some misconfiguration problems kill the searcher a few seconds after it was started, and this behaviour saves a few headaches while trying to debug a stopped searcher ;)     * Takes a few environmental variables as parameters. It allows to make a restart, clean the logs, and enable GC debugging.